Add permissions and users me route
